<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/feed_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/user_profile_top"
            android:layout_width="match_parent"
            android:layout_height="200dp" >

            <ImageView
                android:id="@+id/user_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_faq_line"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/user_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="il mio stato da watcher"
                    android:textColor="@color/red" />

                <Button
                    android:id="@+id/follow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/back_follow_user"
                    android:minHeight="0dp"
                    android:padding="6dp"
                    android:text="@string/follow"
                    android:textColor="@color/white"
                    android:visibility="invisible" />

                <LinearLayout
                    android:id="@+id/quartiere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@color/red"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/pin_big" />

                    <TextView
                        android:id="@+id/quartiere_utente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/change_cover_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_camera_rounded"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/user_profile_following_followers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_profile_top"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <LinearLayout
                android:id="@+id/followings_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/following_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/following_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/following"
                    android:textColor="@color/gray_label"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/followers_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/follower_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/follower_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/followers"
                    android:textColor="@color/gray_label"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_below="@id/user_profile_following_followers"
            android:background="@drawable/drop_shadow" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:background="@drawable/menu_back_avatar"
            android:padding="5dp" >


        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/back_bar_profile"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/scrivibutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/write_ico" />

            <TextView
                android:id="@+id/scrivi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:text="@string/profile_scrivi"
                android:textColor="@color/red"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fotobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/profile_camera_ico" />

            <TextView
                android:id="@+id/foto_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dp"
                android:text="@string/profile_photo"
                android:textColor="@color/red"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>